--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     background-color: rgb(53, 53, 53);
     color: rgb(226, 226, 226);
-    /* padding: 5px; */
     font-size: 31px;
     gap: 12px;
     width: fit-content;
@@ -26,4 +25,24 @@
     position: absolute;
     color: rgb(226, 226, 226);
     bottom: 50px;
+}
+
+.sidebar {
+    display: flex;
+}
+
+.sidebar__explorer {
+    padding: 7px;
+    color: white;
+    height: 54.1rem;
+    width: 12rem;
+    background-color: rgb(32, 32, 32);
+}
+
+
+.explorer__txt {
+    padding: 10px;
+    display: flex;
+    gap: 90px;
+    color: rgb(185, 185, 185);
 }
