added file nav bar and expand option to components

--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -32,6 +32,8 @@
 }
 
 .sidebar__explorer {
+    cursor: pointer;
+    user-select: none;
     padding: 7px;
     color: white;
     height: 54.1rem;
